--- a/server/public/less/components/buttons.less
+++ b/server/public/less/components/buttons.less
@@ -19,4 +19,12 @@
     border: 1px solid @purple;
     .transition(all, 0.3s, ease-in-out);
   }
+
+  &.add-dependents {
+    margin-top: 1em;
+    margin-top: 1rem;
+    width: 100%;
+    text-align: center;
+    .box-sizing(border-box);
+  }
 }
